--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "parse.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.0.0",
+    "clear": "^0.1.0",
     "csv-writer": "^1.6.0",
-    "fast-xml-parser": "^4.0.2"
+    "fast-xml-parser": "^4.0.2",
+    "figlet": "^1.5.2",
+    "inquirer": "^8.2.0"
   }
 }
