--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,24 @@
     "clarity": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix ../ui",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
+    "body-parser": "^1.19.1",
     "chalk": "^5.0.0",
     "clear": "^0.1.0",
+    "concurrently": "^7.0.0",
     "csv-writer": "^1.6.0",
+    "express": "^4.17.2",
     "fast-xml-parser": "^4.0.2",
     "figlet": "^1.5.2",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "nodemon": "^2.0.15"
   }
 }
