--- a/ui/package.json
+++ b/ui/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ui",
   "version": "0.1.0",
+  "proxy":"http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
+    "csv-writer": "^1.6.0",
+    "fast-xml-parser": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
