--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "fast-xml-parser": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.1",
     "react-hook-form": "^7.26.0",
     "react-scripts": "5.0.0",
     "serve": "^13.0.2",
